# ChangeLog for app-admin/eselect-wine
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*eselect-wine-0.3_rc6 (10 Feb 2015)

  10 Feb 2015; <gentoo-wine@eroen.eu> -eselect-wine-0.3_rc5.ebuild,
  +eselect-wine-0.3_rc6.ebuild:
  New RC

*eselect-wine-0.3_rc5 (10 Feb 2015)

  10 Feb 2015; <gentoo-wine@eroen.eu> +eselect-wine-0.3_rc5.ebuild:
  New RC

*eselect-wine-0.3_rc3 (10 Feb 2015)

  10 Feb 2015; <gentoo-wine@eroen.eu> +eselect-wine-0.3_rc3.ebuild:
  New RC

*eselect-wine-0.3_rc2-r1 (10 Feb 2015)

  10 Feb 2015; <gentoo-wine@eroen.eu> +eselect-wine-0.3_rc2-r1.ebuild:
  Add "vanilla" to VARIANTS list.

*eselect-wine-0.3_rc2 (26 Jan 2015)

  26 Jan 2015; <gentoo-wine@eroen.eu> +eselect-wine-0.3_rc2.ebuild, metadata.xml:
  New RC. Unset all variants when uninstalled.

*eselect-wine-0.3_rc1 (23 Jan 2015)

  23 Jan 2015; <gentoo-wine@eroen.eu> +eselect-wine-0.3_rc1.ebuild, +metadata.xml:
  Add eselect wine module for switching between parallel installed wine
  versions
