@@ -1,3 +1,4 @@
 DIST wine.eselect-0.3_rc1 10510 SHA256 d31ace57d98c42f133b2689f9b4bdf7aaf42ed8afb9d239d3592919178175af0 SHA512 ebf1612cc9a5f756f18aa1486ccaa318e5900326bac9904a8c107c2f173152837933f45b80f3f8cc5d0e35aeaae96d7942868b15c4c3f6003405f1bd721461fa WHIRLPOOL 4d682c843c3f98f1c2ac2aa6b09eeb6ec9715affc0070f66284a9d85657676167d866f7af09bdd2fd3a5c6def67033e1020ecd2efac7a2466cf5a38f607ceee8
 DIST wine.eselect-0.3_rc2 10676 SHA256 a2ef82e51cf923d54b5e639c630b9656be3585e28cb91f20186d2a838c497bd5 SHA512 44da99c7a42143661fc3e5ac6190c3e7aaabdfcdbc2055e311340663b4b9bee2e3484fc8904d26e0af6f748606718c59fdb5ffd24da5b0af2dc54c7f3c261842 WHIRLPOOL b78365efe75e8175d5429f867914f1cedf9db12e15fdc852a3848ed4e72f2bc64b305cf13585d1888bd69e0111512f79ba174210cd8c7eeb758b8dd1a7ad729a
 DIST wine.eselect-0.3_rc6 10943 SHA256 38064dc448ac6a0be76deaafb3dee391fadbcbeb9e656070bb53c2ae7c2788c6 SHA512 a3bc7fcccd232a515d551619d7f80531d8753bb076603ec97da8d7c4faf4d24bf1d324300c815563872bcbf56b89d9d69b417178f5f493e1004a9eef3c0f72ac WHIRLPOOL 84c4d3f5ee813cb3f8e76ca0654f295887243b5ecd8e554ed487d229750f51b69a063272441a4d45ded8df39c06f89d005cf607ebadf2969bc5d00e4ef46b207
+DIST wine.eselect-0.3_rc7 11096 SHA256 c56af4890924e7f405ae99c7d1d8981c1d3e1d60bf92e767bcd00bf92b2390c7 SHA512 ce1eb559781446480f256585c6baa8ec76ffa1aac83d5df239e16c73197339d9927037b761a39b34b995c4bbec15f623ede771a53d7d0358896087f23ba5c61a WHIRLPOOL 9a27f62f217341caf8e8e5d43f714a8c4893f6f8679808bf14d243e2d83b64a89888491865dfe015118c314449a5ee768f0577d89eb49cef9ee195afc68c317a
