@@ -2,6 +2,13 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*eselect-wine-0.3_rc7 (19 Mar 2015)
+
+  19 Mar 2015; eroen <gentoo-wine@eroen.eu> +eselect-wine-0.3_rc7.ebuild:
+  New RC, strips trailing slashes in path variables, notably in EROOT, thereby
+  avoiding double leading slashes.
+  https://bugs.gentoo.org/show_bug.cgi?id=434180
+
 *eselect-wine-0.3_rc6 (10 Feb 2015)
 
   10 Feb 2015; <gentoo-wine@eroen.eu> -eselect-wine-0.3_rc5.ebuild,
